# racecar_wk3

./: CMakeLists.txt  README.md  package.xml
launch/: potentialField.launch  racecar_wk3.launch
msg/: BlobDetections.msg  ObjectDetections.msg
scripts/: blobDetector.py  blobDetector2.py  blob_detection.msg  colorDetector.py  commander.py  commander.py.REMOTE.12163.py  commander.py.orig  commanderNode.py  commanderNode_1.0.py  commander_1.0.py  cornerCommander.py  cornerCommanderNode.py  corner_commander.py  faceDetectionTester.py  objectDetector.py  particleCommander.py  potentCommander.py  potentCommanderNode.py  potentialCommander.py  potentialCommanderNode.py  potentialField.py  potentialFieldNode.py  potential_field.py  safety.py  stop_stopping.py  visualizerNode.py
