<?xml version="1.0"?>
<package>
  <name>racecar_wk3</name>
  <version>0.0.0</version>
  <description>The racecar_wk3 package</description>

  <maintainer email="adithyabsk@gmail.com">Adithya Balaji</maintainer>


  <license>MIT</license>

  <author email="todo@todo.com">Braden Oh</author>
  <author email="todo@todo.com">Charles Zhao</author>
  <author email="todo@todo.com">Garret Greiger</author>
  <author email="todo@todo.com">David Song</author> 
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ackermann_cmd_mux</build_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>ackermann_cmd_mux</run_depend>
  <run_depend>ackermann_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
